added styles and animations

--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -2,8 +2,8 @@
 
 <div class="advancedSearchContentWrapper">
    
-    <div class="advSearchLoadingWrapper">
-        <img ng-show="loading" src="../images/ajax-loader.gif">
+    <div class="advSearchLoadingWrapper pacman">
+        <img ng-show="loading" src="../images/swirly.gif">
     </div>
 
     <div class="advancedSearchDivWrapper">
