--- a/app/guitars/partials/welcomePage.html
+++ b/app/guitars/partials/welcomePage.html
@@ -22,8 +22,8 @@
         </div>
     </div>
 
-    <div class="basicSearchLoadingGif">
-        <img ng-show="loading" src="../images/ajax-loader.gif">
+    <div class="basicSearchLoadingGif pacman">
+        <img ng-show="loading" src="../images/swirly.gif">
     </div>
 
     <div ng-show="!loading" class="basicSearchResultsDisplay">
