--- a/css/userNav.css
+++ b/css/userNav.css
@@ -50,14 +50,15 @@
     outline: none;
     overflow: hidden;
     padding: .5em;
+    padding-bottom: .6em;
     cursor: pointer;
     user-select: none;
     text-align: center;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 137, 255);
-    border: solid .3em rgb(111, 137, 255);
+    color: #000080;
+    border: solid .25em #000080;
     border-radius: .4em;
     font-size: 1.2em;
     font-weight: 900;
@@ -76,8 +77,8 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 137, 255);
-    border: solid .3em rgb(111, 137, 255);
+    color: #0000808a;
+    border: solid .2em  #0000808a;
     border-radius: .4em;
     font-size: 1.2em;
     font-weight: 900;
@@ -90,14 +91,15 @@
     outline: none;
     overflow: hidden;
     padding: .5em;
+    padding-bottom: .6em;
     cursor: pointer;
     user-select: none;
     text-align: center;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 137, 255);
-    border: solid .3em rgb(111, 137, 255);
+    color:  #000080;
+    border: solid .25em  #000080;
     border-radius: .4em;
     font-size: 1.2em;
     font-weight: 900;
@@ -116,8 +118,8 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 137, 255);
-    border: solid .3em rgb(111, 137, 255);
+    color:  #0000808a;
+    border: solid .2em  #0000808a;
     border-radius: .4em;
     font-size: 1.2em;
     font-weight: 900;
@@ -130,14 +132,15 @@
     outline: none;
     overflow: hidden;
     padding: .5em;
+    padding-bottom: .6em;
     cursor: pointer;
     user-select: none;
     text-align: center;
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 137, 255);
-    border: solid .3em rgb(111, 137, 255);
+    color:  #000080;
+    border: solid .25em  #000080;
     border-radius: .4em;
     font-size: 1.2em;
     font-weight: 900;
@@ -156,8 +159,8 @@
     white-space: nowrap;
     text-decoration: none;
     text-transform: none;
-    color: rgb(111, 137, 255);
-    border: solid .3em rgb(111, 137, 255);
+    color:  #0000808a;
+    border: solid .2em  #0000808a;
     border-radius: .4em;
     font-size: 1.2em;
     font-weight: 900;
