--- a/app/auth/partials/register.html
+++ b/app/auth/partials/register.html
@@ -1,6 +1,30 @@
-<div>
-    <input type="email" placeholder="Email address" ng-model="auth.email"  autofocus>
-    <input type="password" placeholder="Password" ng-model="auth.password">
-    <button ng-click="registerUser(auth)">Register</button>
-    <button ng-click="logMeIn(auth)">Login</button>
+<div class="authGrid">
+
+    <div class="authTitleWrapper">
+        <div class="authTitleMainWrapper">
+            <h2 class="authTitleMain">Log In or Register</h2>
+        </div>
+        <div class="authSubTitleWrapper">
+            <p class="authSubTitleOne">Enter your email and password below</p>
+        </div>
+        <div class="authSubTitleWrapperTwo">
+            <p class="authSubTitleTwo">Click Log In if you already have an account, Click Register if you are a new user creating an account</p>
+        </div>
+    </div>
+
+    <div class="authInputsWrapper">
+        <div class="emailInputWrapper">
+            <input class="emailInput" type="email" placeholder="Email address" ng-model="auth.email"  autofocus> 
+        </div>
+        <div class="passwordInputWrapper">
+            <input class="passwordInput" type="password" placeholder="Password" ng-model="auth.password">
+        </div>
+        <div class="authLogInButtonWrapper">
+            <button class="authLogInButton" ng-click="logMeIn(auth)">Login</button>  
+        </div>
+        <div class="registerButtonWrapper">
+            <button class="registerButton" ng-click="registerUser(auth)">Register</button> 
+        </div>
+    </div>
+
 </div>
