--- a/app/userGear/partials/displayUserGuitars.html
+++ b/app/userGear/partials/displayUserGuitars.html
@@ -19,8 +19,8 @@
         </div>
     </div>
 
-    <div class="displayLoadingWrapper">
-        <img ng-show="loading" src="../images/ajax-loader.gif">
+    <div class="displayLoadingWrapper pacman">
+        <img ng-show="loading" src="../images/swirly.gif">
     </div>
 
     <div class="userGuitarDisplayWrapper">
