--- a/app/auth/partials/register.html
+++ b/app/auth/partials/register.html
@@ -1,17 +1,24 @@
+<!-- wrapper div for user log in/registrition elements -->
 <div class="authGrid">
 
+    <!-- wrapper div for title elements -->
     <div class="authTitleWrapper">
+
+        <!-- wrapper div for main title text -->
         <div class="authTitleMainWrapper">
             <h2 class="authTitleMain">Log In or Register</h2>
         </div>
+        <!-- wrapper div for the subtitle text -->
         <div class="authSubTitleWrapper">
             <p class="authSubTitleOne">Enter your email and password below</p>
         </div>
+        <!-- wrapper div for a second set of subtitle text -->
         <div class="authSubTitleWrapperTwo">
             <p class="authSubTitleTwo">Click Log In if you already have an account, Click Register if you are a new user creating an account</p>
         </div>
     </div>
 
+    <!-- wrapper for input elements and buttons elements -->
     <div class="authInputsWrapper">
         <div class="emailInputWrapper">
             <input class="emailInput" type="email" placeholder="Email address" ng-model="auth.email"  autofocus> 
